; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_domain.c_pffindprotonotype.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_domain.c_pffindprotonotype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.protosw = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.protosw* @pffindprotonotype(i32 %0, i32 %1) #0 {
  %3 = alloca %struct.protosw*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.protosw*, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp eq i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store %struct.protosw* null, %struct.protosw** %3, align 8
  br label %19

11:                                               ; preds = %2
  %12 = call i32 (...) @domain_guard_deploy()
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* %5, align 4
  %15 = call %struct.protosw* @pffindprotonotype_locked(i32 %13, i32 %14, i32 0)
  store %struct.protosw* %15, %struct.protosw** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @domain_guard_release(i32 %16)
  %18 = load %struct.protosw*, %struct.protosw** %6, align 8
  store %struct.protosw* %18, %struct.protosw** %3, align 8
  br label %19

19:                                               ; preds = %11, %10
  %20 = load %struct.protosw*, %struct.protosw** %3, align 8
  ret %struct.protosw* %20
}

declare dso_local i32 @domain_guard_deploy(...) #1

declare dso_local %struct.protosw* @pffindprotonotype_locked(i32, i32, i32) #1

declare dso_local i32 @domain_guard_release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
